# fte-enginesimulation

./: .gitignore  EQ.py  ZK.py  density_dependent_test.py  dyer.py  loading_sample.jsonc  main.py  main_GUI.py  pyproject.toml  readme.md  sample_evo.jsonc  sample_init.jsonc  tank_test.py  test.jsonc
inputdatas/: N2O.csv
inputprograms/: NASACEA.py  cea_interface.py  importjson.py  interp_density.py  iteration_logger.py  rocket_constants.py  rocket_simulation.py
old version files/: FLXsimulation.py  plot_densitycurve.py
old version files/old imports/: endingsimu.py  rocket_constants.py
pythonfiles/: NASACEA.py  cea_interface.py  rocket_constants.py  rocket_simulation.py
